--- a/css/quiz-selection.css
+++ b/css/quiz-selection.css
@@ -10,75 +10,79 @@
 
 body {
     background-color: #000000;
-    margin: 0;
+    margin-top: 6vw;
+    margin-bottom: 6vw;
+    padding-left: 4vw;
+    padding-right: 4vw;
 }
 
 p {
     line-height: 0;
     font-family: 'Roboto Condensed SemiBold';
+    font-size: 3vw;
 }
 
 h1 {
     font-family: 'Roboto Medium';
     line-height: 5px;
+    font-size: 5vw;
 }
 
 #widgets {
     color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+}
+
+#widgets-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 93vh;
     width: 100%;
 }
 
 /* ROWS */
 
 #row-1 {
-    padding-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
     gap: 2vw;
     display: flex;
 }
 
 #row-2 {
-    margin-top: 2vw;
     gap: 2vw;
-    padding-left: 40px;
-    padding-right: 40px;
     display: flex;
 }
 
 #row-3 {
     gap: 2vw;
-    margin-top: 2vw;
-    padding-left: 40px;
-    padding-right: 40px;
     display: flex;
 }
 
 #row-4 {
     gap: 2vw;
-    margin-top: 2vw;
-    padding-left: 40px;
-    padding-right: 40px;
     display: flex;
 }
 
 #row-5 {
     gap: 2vw;
-    margin-top: 2vw;
-    padding-left: 40px;
-    padding-right: 40px;
     display: flex;
-    padding-bottom: 40px;
 }
 
 /* WIDGETS */
 
+#widget-1, #widget-2, #widget-3, #widget-4, #widget-5, #widget-6, #widget-7, #widget-8, #widget-9, #widget-10 {
+    border-radius: 4vw;
+}
+
 #widget-1 {
-    border-radius: 30px;
-    width: 80%;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    width: 100%;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     background-color: #FF362F;
     text-align: right;
 }
@@ -88,91 +92,127 @@ h1 {
 }
 
 #widget-2 {
-    border-radius: 30px;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     width: 100%;
     background-color: #13C055;
     text-align: right;
 }
 
 #widget-3 {
-    border-radius: 30px;
     width: 100%;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     background-color: #006AFA;
     text-align: right;
 }
 
 #widget-4 {
-    border-radius: 30px;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
-    width: 50%;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
+    width: 100%;
     background-color: #FF8C21;
     text-align: right;
 }
 
 #widget-5 {
-    border-radius: 30px;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     width: 100%;
     background-color: #13C055;
     text-align: right;
 }
 
 #widget-6 {
-    border-radius: 30px;
-    width: 80%;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    width: 100%;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     background-color: #FF362F;
     text-align: right;
 }
 
 #widget-7 {
-    border-radius: 30px;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
-    width: 50%;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
+    width: 100%;
     background-color: #FF8C21;
     text-align: right;
 }
 
 #widget-8 {
-    border-radius: 30px;
     width: 100%;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     background-color: #006AFA;
     text-align: right;
 }
 
 #widget-9 {
-    border-radius: 30px;
-    width: 80%;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    width: 100%;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     background-color: #FF362F;
     text-align: right;
 }
 
 #widget-10 {
-    border-radius: 30px;
-    padding-right: 40px;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-right: 8vw;
+    padding-left: 8vw;
+    padding-top: 16vw;
+    padding-bottom: 3vw;
     width: 100%;
     background-color: #13C055;
     text-align: right;
+}
+
+@media only screen and (max-width: 1024px) {
+    #widgets-wrapper {
+        transform: translateY(20vw);
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    #widgets-wrapper {
+        transform: translateY(0px);
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    #widgets-wrapper {
+        transform: translateY(0px);
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    #widgets-wrapper {
+        transform: translateY(0px);
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #widgets-wrapper {
+        transform: translateY(0px);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #widgets-wrapper {
+        transform: translateY(0px);
+    }
 }
